Refactor catalog to fix the new database scheme